--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "illuminate/view": "^8.0|^9.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "mockery/mockery": "^1.5"
     },
     "autoload": {
         "psr-4": {
